<resources>
    <string name="app_name">Serene</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id">220488927653-h11ld1kv68vr9sjvmrm5c60iv8hi6qbh.apps.googleusercontent.com</string>
    <string name="home">Home</string>
    <string name="journal">Journal</string>
    <string name="goals">Goals</string>
    <string name="insights">Insights</string>
    <string name="focus">Focus</string>
    <string name="empty" />
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="right_arrow"><![CDATA[>]]></string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="enter_pin">Enter PIN</string>
    <string name="unlock">Unlock</string>
    <string name="favorite">favorite</string>
    <string name="view_favorites">♡ View Favorites</string>
    <string name="no_journals_yet">No journals yet 📝</string>
    <string name="your_journals">Your Journals</string>
    <string name="add_journal">Add Journal</string>
    <string name="your_wellness_companion">Your Wellness Companion</string>
    <string name="welcome_back">Welcome back</string>
    <string name="sign_in_to_continue_your_journey">Sign in to continue your journey</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in">Sign In</string>
    <string name="or">--- or ---</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="no_account_sign_up">No account? Sign Up</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="start_your_wellness_journey">Start your wellness journey</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="by_signing_up_you_agree_to_our_terms_and_conditions">By signing up, you agree to our Terms and Conditions</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="create_account">Create Account</string>
    <string name="let_s_go">Let\'s go!</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="use_the_arrows_to_customise">Use the arrows to customise</string>
    <string name="create_your_avatar">Create your avatar</string>
    <string name="no_favourites_currently">No favourites currently</string>
    <string name="favorite_journals">♡ Favorite Journals</string>
    <string name="no_favorites_yet">No favorites yet 📝</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="already_registered_sign_in">Already registered? Sign In</string>
</resources>