<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:background="@drawable/backgroundgradient">

    <LinearLayout
        android:id="@+id/logoContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/serenelogo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_wellness_companion"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#a66eef" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        app:cardCornerRadius="40dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@id/logoContainer"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/text_color_purple" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_to_continue_your_journey"
                android:textSize="16sp"
                android:layout_marginTop="4dp"
                android:textColor="@color/text_color_purple" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxCornerRadiusTopStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxStrokeColor="#8E7CC3"
                app:hintTextColor="#A098B9">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:padding="16dp"
                    android:textColor="#000000"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxCornerRadiusTopStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxStrokeColor="#8E7CC3"
                app:endIconMode="password_toggle"
                app:hintTextColor="#A098B9">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:padding="16dp"
                    android:inputType="textPassword"
                    android:textColor="#000000"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvForgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="12dp"
                android:text="@string/forgot_password"
                android:textColor="@color/text_color_purple" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <CheckBox
                    android:id="@+id/cbRememberMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remember_me"
                    android:textSize="14sp"
                    android:textColor="@color/text_color_purple"
                    android:layout_marginStart="6dp"/>
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="26dp"
            android:backgroundTint="@color/purple"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:cornerRadius="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="25sp"
                android:text="@string/or"
                android:layout_marginVertical="10dp"
                android:textColor="@color/text_color_purple" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnGoogle"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:text="@string/continue_with_google"
                android:textAllCaps="false"
                android:textColor="@color/text_color_purple"
                app:cornerRadius="16dp"
                app:strokeWidth="1dp"
                app:strokeColor="@color/purple"
                android:backgroundTint="@android:color/white"/>

            <TextView
                android:id="@+id/tvSignup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:text="@string/no_account_sign_up"
                android:textColor="@color/text_color_purple"
                android:textSize="14sp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>